--- a/reference/ToDo/src/ToDo/Styles/NavigationBar.xaml
+++ b/reference/ToDo/src/ToDo/Styles/NavigationBar.xaml
@@ -1,4 +1,4 @@
-<ResourceDictionary
+﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,7 +8,7 @@
         x:Key="RootModalMainCommandStyle"
         BasedOn="{StaticResource ModalMainCommandStyle}"
         TargetType="AppBarButton">
-        <Setter Property="Foreground" Value="{ThemeResource OnSecondaryBrush}" />
+        <Setter Property="Foreground" Value="{ThemeResource PrimaryBrush}" />
         <Setter Property="Icon">
             <Setter.Value>
                 <BitmapIcon UriSource="ms-appx:///Assets/Icons/close.png" />
