--- a/reference/ToDo/src/ToDo/Views/Dialogs/SettingsFlyout.xaml
+++ b/reference/ToDo/src/ToDo/Views/Dialogs/SettingsFlyout.xaml
@@ -123,7 +123,7 @@
 										</utu:ChipGroup.ItemTemplate>
 									</utu:ChipGroup>
 									<TextBlock x:Uid="SettingsFlyout_NoteToRestart"
-											    Foreground="{ThemeResource OnSurfaceLowBrush}"
+											    Foreground="{ThemeResource OnSurfaceMediumBrush}"
 											    Text="Change will be applied at next app restart"
 											    utu:AutoLayout.CounterAlignment="Start"
 											    Style="{StaticResource BodyMedium}" />
