fix: theme switching

--- a/reference/ToDo/src/ToDo/Views/Dialogs/SettingsFlyout.xaml
+++ b/reference/ToDo/src/ToDo/Views/Dialogs/SettingsFlyout.xaml
@@ -139,7 +139,7 @@
 												   SelectionMode="Single"
 												   ItemsSource="{Binding AppThemes}"
 												   SelectedItem="{Binding SelectedAppTheme, Mode=TwoWay}"
-                           ItemClick="ThemeChipGroup_ItemClick"
+                           ItemChecked="ThemeChipGroup_ItemChecked"
 												   Style="{StaticResource FilterChipGroupStyle}">
                     <utu:ChipGroup.ItemTemplate>
                       <DataTemplate>
