--- a/reference/ToDo/src/ToDo/Views/TaskListPage.xaml
+++ b/reference/ToDo/src/ToDo/Views/TaskListPage.xaml
@@ -135,20 +135,16 @@
 						<AdaptiveTrigger MinWindowWidth="{StaticResource ExtraWideMinWindowWidth}" />
 					</VisualState.StateTriggers>
 					<VisualState.Setters>
-						<Setter Target="TaskListColumn.Width"
-								Value="2*" />
-						<Setter Target="TaskColumn.Width"
-								Value="*" />
-						<Setter Target="TaskDetailsGrid.Visibility"
-								Value="Visible" />
-						<Setter Target="TaskDetails.(uen:Region.Attached)"
-								Value="true" />
+						<Setter Target="TaskListColumn.Width" Value="2*" />
+						<Setter Target="TaskColumn.Width" Value="*" />
+						<Setter Target="TaskDetailsGrid.Visibility" Value="Visible" />
+						<Setter Target="TaskDetails.(uen:Region.Attached)" Value="true" />
 					</VisualState.Setters>
 				</VisualState>
 				<VisualState x:Name="Wide">
-          <VisualState.StateTriggers>
-            <AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidth}" />
-          </VisualState.StateTriggers>
+					<VisualState.StateTriggers>
+						<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidth}" />
+					</VisualState.StateTriggers>
 					<VisualState.Setters>
 						<Setter Target="TaskListColumn.Width" Value="*" />
 						<Setter Target="TaskListColumn.MinWidth" Value="300" />
@@ -156,12 +152,12 @@
 						<Setter Target="TaskDetailsGrid.Visibility" Value="Visible" />
 						<Setter Target="TaskDetails.(uen:Region.Attached)" Value="true" />
 					</VisualState.Setters>
-        </VisualState>
+				</VisualState>
 				<VisualState x:Name="Narrow">
-          <VisualState.StateTriggers>
-            <AdaptiveTrigger MinWindowWidth="0" />
-          </VisualState.StateTriggers>
-        </VisualState>
+					<VisualState.StateTriggers>
+						<AdaptiveTrigger MinWindowWidth="0" />
+					</VisualState.StateTriggers>
+				</VisualState>
 			</VisualStateGroup>
 		</VisualStateManager.VisualStateGroups>
 
