fix: windows crash

--- a/reference/ToDo/src/ToDo/Views/TaskListPage.xaml
+++ b/reference/ToDo/src/ToDo/Views/TaskListPage.xaml
@@ -154,10 +154,13 @@
 					</VisualState.Setters>
 				</VisualState>
 				<VisualState x:Name="Narrow">
-					<VisualState.StateTriggers>
-						<AdaptiveTrigger MinWindowWidth="0" />
-					</VisualState.StateTriggers>
-				</VisualState>
+          <VisualState.StateTriggers>
+            <AdaptiveTrigger MinWindowWidth="0" />
+          </VisualState.StateTriggers>
+          <VisualState.Setters>
+            <Setter Target="TaskListColumn.MinWidth" Value="*" />
+          </VisualState.Setters>
+        </VisualState>
 			</VisualStateGroup>
 		</VisualStateManager.VisualStateGroups>
 
