--- a/reference/Commerce/src/Commerce/Styles/NavigationBar.xaml
+++ b/reference/Commerce/src/Commerce/Styles/NavigationBar.xaml
@@ -14,7 +14,8 @@
 		   TargetType="utu:NavigationBar">
 		<Setter Property="Background" Value="{ThemeResource PrimaryBrush}" />
 		<Setter Property="Foreground" Value="{ThemeResource OnPrimaryBrush}" />
-	</Style>
+		<Setter Property="MainCommandStyle" Value="{StaticResource PrimaryAppBarButtonStyle}" />
+  </Style>
 
 	<Style TargetType="utu:NavigationBar"
 		   BasedOn="{StaticResource PrimaryNavigationBarStyle}" />
