--- a/reference/Commerce/src/Commerce/Views/ProductControl.xaml
+++ b/reference/Commerce/src/Commerce/Views/ProductControl.xaml
@@ -24,7 +24,15 @@
 		<utu:AutoLayout utu:AutoLayout.PrimaryAlignment="Stretch">
 
 			<utu:NavigationBar Content="Uno Commerce"
-							   x:Uid="Product_Detail_Navigation_Bar" />
+												 x:Uid="Product_Detail_Navigation_Bar">
+				<utu:NavigationBar.MainCommand>
+					<AppBarButton>
+						<AppBarButton.Icon>
+							<BitmapIcon UriSource="ms-appx:///Assets/Icons/back.png" />
+						</AppBarButton.Icon>
+					</AppBarButton>
+				</utu:NavigationBar.MainCommand>
+			</utu:NavigationBar>
 			<ScrollViewer utu:AutoLayout.CounterAlignment="Stretch"
 						  utu:AutoLayout.PrimaryAlignment="Stretch">
 				<utu:AutoLayout Background="{StaticResource SurfaceBrush}">
@@ -79,7 +87,7 @@
 								<utu:Divider Style="{StaticResource DividerStyle}" />
 								<utu:AutoLayout Spacing="10"
 												Padding="16,32,16,32">
-									<Button Content="add to cart"
+									<Button Content="Add to cart"
 											Command="{utu:AncestorBinding Path=DataContext.AddToCart,
 																		  AncestorType=uer:FeedView}"
 											utu:AutoLayout.PrimaryLength="40"
@@ -89,7 +97,7 @@
 											<PathIcon Data="{StaticResource Icon_Shopping_Cart}" />
 										</ut:ControlExtensions.Icon>
 									</Button>
-									<Button Content="save for later"
+									<Button Content="Save for later"
 											utu:AutoLayout.PrimaryLength="40"
 											Style="{StaticResource OutlinedButtonStyle}"
 											x:Uid="Product_Detail_Button" />
