--- a/reference/ToDo/src/ToDo/Styles/ColorPaletteOverride.xaml
+++ b/reference/ToDo/src/ToDo/Styles/ColorPaletteOverride.xaml
@@ -1,85 +1,71 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-	<ResourceDictionary.ThemeDictionaries>
-		<!-- Light Theme -->
-		<ResourceDictionary x:Key="Light">
+  <!--Themed colors-->
+  <ResourceDictionary.ThemeDictionaries>
+    <ResourceDictionary x:Key="Light">
+      <Color x:Key="SurfaceColor">#FFFFFF</Color>
+      <Color x:Key="PrimaryColor">#5946D2</Color>
+      <Color x:Key="OnSurfaceColor">#1C1B1F</Color>
+      <Color x:Key="ErrorColor">#F85977</Color>
+      <Color x:Key="PrimaryInverseColor">#C8BFFF</Color>
+      <Color x:Key="OnPrimaryColor">#FFFFFF</Color>
+      <Color x:Key="PrimaryContainerColor">#E5DEFF</Color>
+      <Color x:Key="OnPrimaryContainerColor">#160067</Color>
+      <Color x:Key="PrimaryVariantLightColor">#B0A2F2</Color>
+      <Color x:Key="PrimaryVariantDarkColor">#5835E5</Color>
+      <Color x:Key="SecondaryColor">#006C47</Color>
+      <Color x:Key="SecondaryVariantDarkColor">#2BB27E</Color>
+      <Color x:Key="SecondaryVariantLightColor">#9CFFDF</Color>
+      <Color x:Key="OnSecondaryColor">#FFFFFF</Color>
+      <Color x:Key="SecondaryContainerColor">#E5DFF9</Color>
+      <Color x:Key="OnSecondaryContainerColor">#1B192C</Color>
+      <Color x:Key="BackgroundColor">#F4F4F4</Color>
+      <Color x:Key="OnBackgroundColor">#1C1B1F</Color>
+      <Color x:Key="InverseSurfaceColor">#313033</Color>
+      <Color x:Key="InverseOnSurfaceColor">#F4EFF4</Color>
+      <Color x:Key="SurfaceVariantColor">#FAF8FB</Color>
+      <Color x:Key="OnSurfaceVariantColor">#49454F</Color>
+      <Color x:Key="OnErrorColor">#FFFFFF</Color>
+      <Color x:Key="ErrorContainerColor">#F9DEDC</Color>
+      <Color x:Key="OnErrorContainerColor">#410E0B</Color>
+      <Color x:Key="TertiaryColor">#0061A4</Color>
+      <Color x:Key="OnTertiaryColor">#FFFFFF</Color>
+      <Color x:Key="TertiaryContainerColor">#CFE4FF</Color>
+      <Color x:Key="OnTertiaryContainerColor">#001D36</Color>
+    </ResourceDictionary>
 
-			<Color x:Key="PrimaryColor">#5B4CF5</Color>
-			<Color x:Key="SecondaryColor">#67E5AD</Color>
-			<Color x:Key="BackgroundColor">#F4F4F4</Color>
-			<Color x:Key="SurfaceColor">#FFFFFF</Color>
-			<Color x:Key="OnSurfaceColor">#000000</Color>
-			<Color x:Key="ErrorColor">#F85977</Color>
-
-			<!-- Primary -->
-			<!--<Color x:Key="PrimaryColor">#086AD1</Color>
-			<Color x:Key="PrimaryVariantDarkColor">#04488C</Color>
-			<Color x:Key="PrimaryVariantLightColor">#E3EFFB</Color>-->
-
-			<!-- OnPrimary -->
-			<Color x:Key="OnPrimaryColor">#FFFFFF</Color>
-
-			<!-- Secondary -->
-			<!--<Color x:Key="SecondaryColor">#FEB839</Color>
-			<Color x:Key="SecondaryVariantDarkColor">#FFA502</Color>
-			<Color x:Key="SecondaryVariantLightColor">#FFD487</Color>-->
-
-			<!-- OnSecondary -->
-			<Color x:Key="OnSecondaryColor">#000000</Color>
-
-			<!-- Background -->
-			<!--<Color x:Key="BackgroundColor">#F0F0F0</Color>-->
-
-			<!-- OnBackground -->
-			<Color x:Key="OnBackgroundColor">#000000</Color>
-
-			<!-- Surface -->
-			<!--<Color x:Key="SurfaceColor">#FFFFFF</Color>-->
-
-			<!-- OnSurface -->
-			<!--<Color x:Key="OnSurfaceColor">#000000</Color>-->
-
-			<!-- Error -->
-			<!--<Color x:Key="ErrorColor">#B00020</Color>-->
-
-			<!-- OnError -->
-			<Color x:Key="OnErrorColor">#FFFFFF</Color>
-		</ResourceDictionary>
-
-		<!-- Dark Theme -->
-		<ResourceDictionary x:Key="Dark">
-			<!-- Primary -->
-			<Color x:Key="PrimaryColor">#2F81D8</Color>
-
-			<!-- OnPrimary -->
-			<Color x:Key="OnPrimaryColor">#FFFFFF</Color>
-
-			<!-- Secondary -->
-			<Color x:Key="SecondaryColor">#FEB839</Color>
-
-			<!-- OnSecondary -->
-			<Color x:Key="OnSecondaryColor">#000000</Color>
-
-			<!-- Background -->
-			<Color x:Key="BackgroundColor">#000000</Color>
-
-			<!-- OnBackground -->
-			<Color x:Key="OnBackgroundColor">#FFFFFF</Color>
-
-			<!-- Surface -->
-			<Color x:Key="SurfaceColor">#0F0F0F</Color>
-
-			<!-- OnSurface -->
-			<Color x:Key="OnSurfaceColor">#FFFFFF</Color>
-
-			<!-- Error -->
-			<Color x:Key="ErrorColor">#B2213C</Color>
-
-			<!-- OnError -->
-			<Color x:Key="OnErrorColor">#FFFFFF</Color>
-		</ResourceDictionary>
-
-	</ResourceDictionary.ThemeDictionaries>
-
+    <ResourceDictionary x:Key="Dark">
+      <Color x:Key="PrimaryColor">#9373FF</Color>
+      <Color x:Key="PrimaryInverseColor">#5946D2</Color>
+      <Color x:Key="OnPrimaryColor">#FFFFFF</Color>
+      <Color x:Key="PrimaryContainerColor">#4128BA</Color>
+      <Color x:Key="OnPrimaryContainerColor">#E5DEFF</Color>
+      <Color x:Key="PrimaryVariantDarkColor">#CBBEFF</Color>
+      <Color x:Key="PrimaryVariantLightColor">#544794</Color>
+      <Color x:Key="SecondaryColor">#63DCA6</Color>
+      <Color x:Key="OnSecondaryColor">#003823</Color>
+      <Color x:Key="SecondaryContainerColor">#474459</Color>
+      <Color x:Key="OnSecondaryContainerColor">#E5DFF9</Color>
+      <Color x:Key="SecondaryVariantLightColor">#27AA77</Color>
+      <Color x:Key="SecondaryVariantDarkColor">#98FFD8</Color>
+      <Color x:Key="TertiaryColor">#9BCAFF</Color>
+      <Color x:Key="OnTertiaryColor">#003259</Color>
+      <Color x:Key="TertiaryContainerColor">#00497E</Color>
+      <Color x:Key="OnTertiaryContainerColor">#CFE4FF</Color>
+      <Color x:Key="ErrorColor">#D9415E</Color>
+      <Color x:Key="OnErrorColor">#FFFFFF</Color>
+      <Color x:Key="ErrorContainerColor">#8C1D18</Color>
+      <Color x:Key="OnErrorContainerColor">#F9DEDC</Color>
+      <Color x:Key="BackgroundColor">#252429</Color>
+      <Color x:Key="OnBackgroundColor">#E6E1E5</Color>
+      <Color x:Key="SurfaceColor">#201F24</Color>
+      <Color x:Key="SurfaceInverseColor">#E6E1E5</Color>
+      <Color x:Key="OnSurfaceColor">#E6E1E5</Color>
+      <Color x:Key="OnSurfaceInverseColor">#1C1B1F</Color>
+      <Color x:Key="SurfaceVariantColor">#49454F</Color>
+      <Color x:Key="OnSurfaceVariantColor">#CAC4D0</Color>
+      <Color x:Key="OutlineColor">#938F99</Color>
+    </ResourceDictionary>
+  </ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
