chore: Added config files and fixed uno logo

--- a/UI/Navigation/NavigationWithXaml/NavigationWithXaml/Presentation/MainPage.xaml
+++ b/UI/Navigation/NavigationWithXaml/NavigationWithXaml/Presentation/MainPage.xaml
@@ -23,7 +23,7 @@
                Height="150"
                Margin="12"
                HorizontalAlignment="Center"
-               Source="Assets/logo.png" />
+               Source="ms-appx:///Assets/logo.png" />
         <Button Content="Go to SamplePage"
                 uen:Navigation.Request="Sample" />
       </StackPanel>
