fix: cleaning the code

--- a/UI/Navigation/NavigationWithXaml/NavigationWithXaml/Presentation/MainPage.xaml
+++ b/UI/Navigation/NavigationWithXaml/NavigationWithXaml/Presentation/MainPage.xaml
@@ -24,6 +24,7 @@
                Margin="12"
                HorizontalAlignment="Center"
                Source="ms-appx:///Assets/logo.png" />
+        <!--The Navigation.Request attached property is used to navigate to the SamplePage-->
         <Button Content="Go to SamplePage"
                 uen:Navigation.Request="Sample" />
       </StackPanel>
