--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -13,13 +13,18 @@
 		<muxc:NavigationView uen:Region.Attached="True"
 							 IsBackButtonVisible="Collapsed"
 							 IsPaneOpen="True"
-							 IsSettingsVisible="False"
-							 OpenPaneLength="200">
+							 IsSettingsVisible="False">
 			<muxc:NavigationView.MenuItems>
 
 				<muxc:NavigationViewItem uen:Region.Name="PageNavigation" Content="Page Navigation">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
+
+				<muxc:NavigationViewItem uen:Region.Name="CControlNavigation" Content="ContentControl Navigation">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="DockRight" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
