--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -28,6 +28,12 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
+				<muxc:NavigationViewItem uen:Region.Name="TabBarNavigation" Content="TabBar Navigation">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="SwitchApps" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
+
 			</muxc:NavigationView.MenuItems>
 
 			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
