--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -34,6 +34,12 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
+				<muxc:NavigationViewItem uen:Region.Name="TabBarWithData" Content="TabBar With Data">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="DockBottom" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
+
 			</muxc:NavigationView.MenuItems>
 
 			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
