chore: Add Request a Value use case

--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -22,6 +22,12 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
+				<muxc:NavigationViewItem uen:Region.Name="RequestValueMain" Content="Request Value">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="Remote" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
+
 				<muxc:NavigationViewItem uen:Region.Name="CControlNavigation" Content="ContentControl Navigation">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="DockRight" />
