feat: Display a Message Dialog

--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
@@ -32,7 +32,11 @@
             <!-- New button using Navigation via code behind -->
             <Button Command="{Binding NavigateCommand}"
                     Content="Navigate via code behind" />
-            
+
+            <!-- Button to show Message Dialog -->
+            <Button Content="Show Simple Message Dialog"
+                    Command="{Binding ShowSimpleDialogCommand}" />
+
         </StackPanel>
 	</Grid>
 </Page>
