--- a/UI/PhotoViewer/PhotoViewer/AppResources.xaml
+++ b/UI/PhotoViewer/PhotoViewer/AppResources.xaml
@@ -5,6 +5,9 @@
     <!-- Load WinUI resources -->
     <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 
+    <!-- Import ZoomContentControl style -->
+    <ResourceDictionary Source="ms-appx:///InteractionControls/ZoomContentControl.xaml" />
+
   </ResourceDictionary.MergedDictionaries>
   <!-- Add resources here -->
 
