fix: Display a message dialog in a different page

--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -46,7 +46,14 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-			</muxc:NavigationView.MenuItems>
+                <muxc:NavigationViewItem uen:Region.Name="MessageDialog"
+                                         Content="Message Dialog">
+                    <muxc:NavigationViewItem.Icon>
+                        <SymbolIcon Symbol="Message" />
+                    </muxc:NavigationViewItem.Icon>
+                </muxc:NavigationViewItem>
+
+            </muxc:NavigationView.MenuItems>
 
 			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
 		</muxc:NavigationView>
