--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -53,6 +53,13 @@
                     </muxc:NavigationViewItem.Icon>
                 </muxc:NavigationViewItem>
 
+                <muxc:NavigationViewItem uen:Region.Name="ModalDialog"
+                                         Content="Modal Dialog">
+                    <muxc:NavigationViewItem.Icon>
+                        <SymbolIcon Symbol="Message" />
+                    </muxc:NavigationViewItem.Icon>
+                </muxc:NavigationViewItem>
+
             </muxc:NavigationView.MenuItems>
 
 			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
