--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -46,21 +46,19 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-                <muxc:NavigationViewItem uen:Region.Name="MessageDialog"
-                                         Content="Message Dialog">
-                    <muxc:NavigationViewItem.Icon>
-                        <SymbolIcon Symbol="Message" />
-                    </muxc:NavigationViewItem.Icon>
-                </muxc:NavigationViewItem>
+				<muxc:NavigationViewItem uen:Region.Name="MessageDialog" Content="Message Dialog">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="Message" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
 
-                <muxc:NavigationViewItem uen:Region.Name="ModalDialog"
-                                         Content="Modal Dialog">
-                    <muxc:NavigationViewItem.Icon>
-                        <SymbolIcon Symbol="Message" />
-                    </muxc:NavigationViewItem.Icon>
-                </muxc:NavigationViewItem>
+				<muxc:NavigationViewItem uen:Region.Name="ModalDialog" Content="Display Dialog">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="NewWindow" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
 
-            </muxc:NavigationView.MenuItems>
+			</muxc:NavigationView.MenuItems>
 
 			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
 		</muxc:NavigationView>
