--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
@@ -29,10 +29,9 @@
 			<!--  The Navigation.Request attached property is used to navigate to the SamplePage  -->
 			<Button uen:Navigation.Request="Sample" Content="Navigate via XAML" />
 
-            <!--  Using Navigation via code behind  -->
-            <Button Command="{Binding NavigateCommand}"
-                    Content="Navigate via code behind" />
+			<!--  Using Navigation via code behind  -->
+			<Button Command="{Binding NavigateCommand}" Content="Navigate via code behind" />
 
-        </StackPanel>
+		</StackPanel>
 	</Grid>
 </Page>
