chore: Add FromQuery ToQuery sample

--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -58,6 +58,18 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
+				<muxc:NavigationViewItem uen:Region.Name="./ToFromQuery?QueryUser.Id=8a5c5b2e-ff96-474b-9e4d-65bde598f6bc" Content="FromQuery User 1">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="Link" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
+
+				<muxc:NavigationViewItem uen:Region.Name="./ToFromQuery?QueryUser.Id=2b64071a-2c8a-45e4-9f48-3eb7d7aace41" Content="FromQuery User 2">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="Link" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
+
 			</muxc:NavigationView.MenuItems>
 
 			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
