fix: Add NavigationCacheMode to RequestValue to work on windows

--- a/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueMainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueMainPage.xaml
@@ -6,6 +6,7 @@
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	  NavigationCacheMode="Required"
 	  mc:Ignorable="d">
 
 	<Grid>
@@ -38,7 +39,7 @@
 			</TextBlock>
 
 			<Button HorizontalAlignment="Center"
-					Command="{Binding GoToSecondPage}"
+					Command="{Binding GoToSecondViewCommand}"
 					Content="Go to second page" />
 		</StackPanel>
 
