chore: Adjust commands

--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
@@ -30,7 +30,7 @@
 			<Button uen:Navigation.Request="Sample" Content="Navigate via XAML" />
 
 			<!--  Using Navigation via code behind  -->
-			<Button Command="{Binding NavigateCommand}" Content="Navigate via code behind" />
+			<Button Command="{Binding NavigateToSampleCommand}" Content="Navigate via code behind" />
 
 		</StackPanel>
 	</Grid>
