--- a/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
@@ -52,7 +52,7 @@
 					<Button uen:Navigation.Data="{Binding Entity, Mode=TwoWay}"
 							uen:Navigation.Request="-"
 							Content="Go Back" />
-					<Button Command="{Binding GoBackWithResult}" Content="Go Back (Code-Behind)" />
+					<Button Command="{Binding GoBackToViewCommand}" Content="Go Back (Code-Behind)" />
 				</StackPanel>
 			</StackPanel>
 		</StackPanel>
