fix: threading issue

--- a/reference/ToDo/src/ToDo/Views/Dialogs/SettingsFlyout.xaml
+++ b/reference/ToDo/src/ToDo/Views/Dialogs/SettingsFlyout.xaml
@@ -103,7 +103,7 @@
               <utu:ChipGroup x:Name="ThemeChipGroup"
                              SelectionMode="Single"
                              ItemsSource="{Binding AppThemes}"
-                             SelectedItem="{Binding SelectedAppTheme, Mode=TwoWay}"
+                             SelectedItem="{Binding SelectedAppTheme}"
                              ItemChecked="ThemeChipGroup_ItemChecked"
                              Style="{StaticResource FilterChipGroupStyle}">
                 <utu:ChipGroup.ItemTemplate>
