feat: More navigation use cases

--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -16,7 +16,7 @@
 							 IsSettingsVisible="False">
 			<muxc:NavigationView.MenuItems>
 
-				<muxc:NavigationViewItem uen:Region.Name="PageNavigation" Content="Page Navigation">
+				<muxc:NavigationViewItem uen:Region.Name="./PageNavigation" Content="Page Navigation">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
