fix: complex flyout

--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
@@ -43,7 +43,7 @@
                     Click="FlyoutRequestingDataWithCancelClick" />
             
             <TextBlock Text="{Binding FlyoutData.Id}" />
-            <Button uen:Navigation.Request="!ModalDialogSecond"
+            <Button uen:Navigation.Request="!ComplexFlyout"
                     uen:Navigation.Data="{Binding FlyoutData, Mode=TwoWay}"
                     Content="Complex Flyout from Xaml" />
         </StackPanel>
