fix: moved code from behind to view model

--- a/UI/Navigation/src/Navigation/Presentation/MessageDialog/MessageDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MessageDialog/MessageDialogPage.xaml
@@ -37,11 +37,11 @@
 			<Button Command="{Binding ShowSimpleDialogCommand}" Content="Show Message Dialog with code behind" />
 
             <Button Content="MessageDialog Codebehind (route override)"
-                    Click="MessageDialogCodebehindRouteOverrideClick" />
+                    Command="{Binding MessageDialogCodebehindRouteOverrideCommand}" />
 
             <!--  Button to show Message Dialog that disappears aftrer 2 secs  -->
             <Button Content="MessageDialog Codebehind (cancel after 2s)"
-                    Click="MessageDialogCodebehindCancelClick" />
+                    Command="{Binding MessageDialogCodebehindCancelCommand}" />
 
         </StackPanel>
 	</Grid>
