--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -58,7 +58,14 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="./ToFromQuery?QueryUser.Id=8a5c5b2e-ff96-474b-9e4d-65bde598f6bc" Content="FromQuery User 1">
+                <muxc:NavigationViewItem uen:Region.Name="FlyoutDrawer"
+                                         Content="Flyout Drawer">
+                    <muxc:NavigationViewItem.Icon>
+                        <SymbolIcon Symbol="NewWindow" />
+                    </muxc:NavigationViewItem.Icon>
+                </muxc:NavigationViewItem>
+
+                <muxc:NavigationViewItem uen:Region.Name="./ToFromQuery?QueryUser.Id=8a5c5b2e-ff96-474b-9e4d-65bde598f6bc" Content="FromQuery User 1">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Link" />
 					</muxc:NavigationViewItem.Icon>
