fix: flyout drawer styling

--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/NavFlyout.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/NavFlyout.xaml
@@ -6,10 +6,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:uen="using:Uno.Extensions.Navigation.UI"
         xmlns:utu="using:Uno.Toolkit.UI"
-        mc:Ignorable="d">
+        mc:Ignorable="d"
+        Placement="Full"
+        FlyoutPresenterStyle="{StaticResource RightDrawerFlyoutPresenterStyle}">
 
     <StackPanel>
-        <TextBlock Text="{Binding Title}" />
+        <TextBlock Text="Flyout" />
         <Button Content="Button 1"
                 uen:Navigation.Request="First" />
         <Button Content="Button 2"
