--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -77,7 +77,14 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-			</muxc:NavigationView.MenuItems>
+                <muxc:NavigationViewItem uen:Region.Name="BreadcrumbNavigation"
+                                         Content="BreadcrumbNavigation">
+                    <muxc:NavigationViewItem.Icon>
+                        <SymbolIcon Symbol="NewWindow" />
+                    </muxc:NavigationViewItem.Icon>
+                </muxc:NavigationViewItem>
+
+            </muxc:NavigationView.MenuItems>
 
 			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
 		</muxc:NavigationView>
