fix: Breadcrumb Navigation

--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbNavigation.xaml
@@ -28,6 +28,9 @@
 
             <local:BreadcrumbControl />
 
+            <Button Command="{Binding NavigateToFirstCommand}"
+                    Content="Navigate to First Page" />
+
         </StackPanel>
     </Grid>
 </Page>
