--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbControl.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbControl.xaml
@@ -1,6 +1,8 @@
 ﻿<UserControl x:Class="Navigation.Presentation.BreadcrumbControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:uen="using:Uno.Extensions.Navigation.UI"
+             xmlns:utu="using:Uno.Toolkit.UI"
              xmlns:local="using:Navigation.Presentation">
 
     <StackPanel Orientation="Horizontal">
@@ -8,8 +10,12 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding}"
-                                   Margin="0,0,5,0" />
+                        <Button Content="{Binding}"
+                                Style="{StaticResource TextButtonStyle}"
+                                Margin="0,0,5,0"
+                                CommandParameter="{Binding}"
+                                Command="{utu:ItemsControlBinding Path=DataContext.NavigateBreadcrumbCommand}" />
+                        <!--CommandParameter="{Binding}"/>-->
                         <TextBlock Text=">"
                                    Margin="0,0,5,0" />
                     </StackPanel>
