--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/FirstBreadcrumbPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/FirstBreadcrumbPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Navigation.Presentation.ThirdPage"
+﻿<Page x:Class="Navigation.Presentation.FirstBreadcrumbPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,10 +20,11 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Spacing="16">
+            <local:BreadcrumbControl />
             <Button Command="{Binding NavigateToSecondCommand}"
                     Content="Navigate to Second Page" />
-            <Button uen:Navigation.Request="-"
-                    Content="Go Back" />
+            <Button Command="{Binding GoBackCommand}"
+                    Content="Go Back with VM" />
 
         </StackPanel>
     </Grid>
