--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/SecondBreadcrumbPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/SecondBreadcrumbPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Navigation.Presentation.SecondPage"
+﻿<Page x:Class="Navigation.Presentation.SecondBreadcrumbPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,10 +20,13 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Spacing="16">
+            <local:BreadcrumbControl />
             <Button Command="{Binding NavigateToThirdCommand}"
                     Content="Navigate to Third Page" />
             <Button uen:Navigation.Request="-"
                     Content="Go Back" />
+            <Button Command="{Binding GoBackCommand}"
+                    Content="Go Back with VM" />
 
         </StackPanel>
     </Grid>
