--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/ThirdBreadcrumbPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/ThirdBreadcrumbPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Navigation.Presentation.FirstPage"
+﻿<Page x:Class="Navigation.Presentation.ThirdBreadcrumbPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,8 +20,11 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Spacing="16">
-            <Button Command="{Binding NavigateToSecondCommand}"
-                    Content="Navigate to Second Page" />
+            <local:BreadcrumbControl />
+            <Button uen:Navigation.Request="-"
+                    Content="Go Back" />
+            <Button Command="{Binding GoBackCommand}"
+                    Content="Go Back with VM" />
 
         </StackPanel>
     </Grid>
