--- a/UI/Navigation/src/Navigation/App.xaml
+++ b/UI/Navigation/src/Navigation/App.xaml
@@ -9,6 +9,7 @@
 				<!--  Load WinUI resources  -->
 				<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 				<utum:MaterialToolkitTheme ColorOverrideSource="ms-appx:///Styles/ColorPaletteOverride.xaml" />
+				<ResourceDictionary Source="ms-appx:///Styles/XamlDisplay.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Application.Resources>
